# audio-udp

./: Cargo.toml  README.md  udp_test_settings.yaml
client/: Cargo.toml
client/src/: main.rs  utils.rs
common/: Cargo.toml
common/src/: console_status.rs  lib.rs  sigoid.rs  throughput_meter.rs
opus-pg/: Cargo.toml
opus-pg/src/: main.rs
program-capture/: Cargo.toml
program-capture/src/: activate_ex.rs  main.rs
server/: Cargo.toml
server/src/: main.rs
udp-latnecy-test/: Cargo.toml
udp-latnecy-test/src/: main.rs  std_send.rs
