[package]
name = "opus-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
cpal = "0.15.2"
opus = {git = "https://github.com/SpaceManiac/opus-rs.git", rev = "c7fda0ccdccd6136c8ba07fdb2e8304641f22a12"} # Apr 23 commit
ringbuf = "0.3.3"