[package]
name = "program-capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
future_handles = {version = "0.2.0", features = ["sync"]}
thiserror = "1.0.49"
tokio = {version = "1.32.0", features = ["full"]}


[dependencies.windows] 
version = "0.51.1"
features = ["implement", "Win32_System_Com", "Win32_Media_Audio", "Win32_Foundation", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"]
